parser.out
Created by PLY version 3.3 (http://www.dabeaz.com/ply)

Unused terminals:

    HEXADECIMAL
    SIMBOLO
    RESERVADO
    OCTAL
    BINARIO

Grammar

Rule 0     S' -> programa
Rule 1     programa -> DEF ID : [ listacmd ]
Rule 2     programa -> DEF ID error [ listacmd ]
Rule 3     programa -> DEF ID : error listacmd ]
Rule 4     programa -> DEF ID : [ listacmd error
Rule 5     empty -> <empty>
Rule 6     listacmd -> comando listacmd1
Rule 7     listacmd1 -> empty
Rule 8     listacmd1 -> listacmd
Rule 9     comando -> cmdatribui
Rule 10    comando -> cmdentrada
Rule 11    comando -> cmdsaida
Rule 12    comando -> cmdselecao
Rule 13    comando -> cmdrepeticao
Rule 14    listaidenti -> ID listaindenti1
Rule 15    listaindenti1 -> empty
Rule 16    listaindenti1 -> , listaidenti
Rule 17    listaexp -> expressao listaexp1
Rule 18    listaexp1 -> , listaexp
Rule 19    listaexp1 -> empty
Rule 20    listaexp1 -> error listaexp
Rule 21    cmdatribui -> listaidenti SIM_ATTR expressao ;
Rule 22    cmdentrada -> INPUT ( listaidenti ) ;
Rule 23    cmdentrada -> INPUT ( listaidenti error ;
Rule 24    cmdentrada -> INPUT error listaidenti ) ;
Rule 25    cmdentrada -> INPUT ( listaidenti ) error
Rule 26    cmdsaida -> OUTPUT ( listaexp ) ;
Rule 27    cmdsaida -> OUTPUT ( listaexp error ;
Rule 28    cmdsaida -> OUTPUT error listaexp ) ;
Rule 29    cmdsaida -> OUTPUT ( listaexp ) error
Rule 30    cmdselecao -> IF expressao : [ listacmd ] elif else ;
Rule 31    cmdselecao -> IF expressao error [ listacmd ] elif else ;
Rule 32    cmdselecao -> IF expressao : error listacmd ] elif else ;
Rule 33    cmdselecao -> IF expressao : [ listacmd error elif else ;
Rule 34    cmdselecao -> IF expressao : [ listacmd ] elif else error
Rule 35    elif -> empty
Rule 36    elif -> ELIF expressao : [ listacmd ] elif
Rule 37    elif -> ELIF expressao error [ listacmd ] elif
Rule 38    elif -> ELIF expressao : error listacmd ] elif
Rule 39    elif -> ELIF expressao : [ listacmd error elif
Rule 40    else -> empty
Rule 41    else -> ELSE : [ listacmd ]
Rule 42    else -> ELSE error [ listacmd ]
Rule 43    else -> ELSE : error listacmd ]
Rule 44    else -> ELSE : [ listacmd error
Rule 45    cmdrepeticao -> WHILE expressao : [ listacmd ] else ;
Rule 46    cmdrepeticao -> WHILE expressao error [ listacmd ] else ;
Rule 47    cmdrepeticao -> WHILE expressao : error listacmd ] else ;
Rule 48    cmdrepeticao -> WHILE expressao : [ listacmd error else ;
Rule 49    cmdrepeticao -> WHILE expressao : [ listacmd ] else error
Rule 50    expressao -> valor expressao1
Rule 51    expressao1 -> empty
Rule 52    expressao1 -> OR valor expressao1
Rule 53    expressao1 -> AND valor expressao1
Rule 54    expressao1 -> error valor expressao1
Rule 55    valor -> relacional
Rule 56    valor -> TRUE
Rule 57    valor -> FALSE
Rule 58    valor -> NOT valor
Rule 59    relacional -> aritmetica relacional1
Rule 60    relacional1 -> operador aritmetica
Rule 61    relacional1 -> empty
Rule 62    operador -> SIM_EQ
Rule 63    operador -> SIM_DIF
Rule 64    operador -> <
Rule 65    operador -> SIM_LE
Rule 66    operador -> >
Rule 67    operador -> SIM_GE
Rule 68    aritmetica -> termo aritmetica1
Rule 69    aritmetica1 -> empty
Rule 70    aritmetica1 -> + termo aritmetica1
Rule 71    aritmetica1 -> - termo aritmetica1
Rule 72    termo -> fator termo1
Rule 73    termo1 -> empty
Rule 74    termo1 -> * fator termo1
Rule 75    termo1 -> / fator termo1
Rule 76    termo1 -> % fator termo1
Rule 77    fator -> elemento fator1
Rule 78    fator1 -> empty
Rule 79    fator1 -> SIM_POT elemento fator1
Rule 80    elemento -> ID
Rule 81    elemento -> INTEIRO
Rule 82    elemento -> REAL
Rule 83    elemento -> LITERAL
Rule 84    elemento -> ( expressao )
Rule 85    elemento -> + elemento
Rule 86    elemento -> - elemento

Terminals, with rules where they appear

%                    : 76
(                    : 22 23 25 26 27 29 84
)                    : 22 24 25 26 28 29 84
*                    : 74
+                    : 70 85
,                    : 16 18
-                    : 71 86
/                    : 75
:                    : 1 3 4 30 32 33 34 36 38 39 41 43 44 45 47 48 49
;                    : 21 22 23 24 26 27 28 30 31 32 33 45 46 47 48
<                    : 64
>                    : 66
AND                  : 53
BINARIO              : 
DEF                  : 1 2 3 4
ELIF                 : 36 37 38 39
ELSE                 : 41 42 43 44
FALSE                : 57
HEXADECIMAL          : 
ID                   : 1 2 3 4 14 80
IF                   : 30 31 32 33 34
INPUT                : 22 23 24 25
INTEIRO              : 81
LITERAL              : 83
NOT                  : 58
OCTAL                : 
OR                   : 52
OUTPUT               : 26 27 28 29
REAL                 : 82
RESERVADO            : 
SIMBOLO              : 
SIM_ATTR             : 21
SIM_DIF              : 63
SIM_EQ               : 62
SIM_GE               : 67
SIM_LE               : 65
SIM_POT              : 79
TRUE                 : 56
WHILE                : 45 46 47 48 49
[                    : 1 2 4 30 31 33 34 36 37 39 41 42 44 45 46 48 49
]                    : 1 2 3 30 31 32 34 36 37 38 41 42 43 45 46 47 49
error                : 2 3 4 20 23 24 25 27 28 29 31 32 33 34 37 38 39 42 43 44 46 47 48 49 54

Nonterminals, with rules where they appear

aritmetica           : 59 60
aritmetica1          : 68 70 71
cmdatribui           : 9
cmdentrada           : 10
cmdrepeticao         : 13
cmdsaida             : 11
cmdselecao           : 12
comando              : 6
elemento             : 77 79 85 86
elif                 : 30 31 32 33 34 36 37 38 39
else                 : 30 31 32 33 34 45 46 47 48 49
empty                : 7 15 19 35 40 51 61 69 73 78
expressao            : 17 21 30 31 32 33 34 36 37 38 39 45 46 47 48 49 84
expressao1           : 50 52 53 54
fator                : 72 74 75 76
fator1               : 77 79
listacmd             : 1 2 3 4 8 30 31 32 33 34 36 37 38 39 41 42 43 44 45 46 47 48 49
listacmd1            : 6
listaexp             : 18 20 26 27 28 29
listaexp1            : 17
listaidenti          : 16 21 22 23 24 25
listaindenti1        : 14
operador             : 60
programa             : 0
relacional           : 55
relacional1          : 59
termo                : 68 70 71
termo1               : 72 74 75 76
valor                : 50 52 53 54 58

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . DEF ID : [ listacmd ]
    (2) programa -> . DEF ID error [ listacmd ]
    (3) programa -> . DEF ID : error listacmd ]
    (4) programa -> . DEF ID : [ listacmd error

    DEF             shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> DEF . ID : [ listacmd ]
    (2) programa -> DEF . ID error [ listacmd ]
    (3) programa -> DEF . ID : error listacmd ]
    (4) programa -> DEF . ID : [ listacmd error

    ID              shift and go to state 3


state 3

    (1) programa -> DEF ID . : [ listacmd ]
    (2) programa -> DEF ID . error [ listacmd ]
    (3) programa -> DEF ID . : error listacmd ]
    (4) programa -> DEF ID . : [ listacmd error

    :               shift and go to state 5
    error           shift and go to state 4


state 4

    (2) programa -> DEF ID error . [ listacmd ]

    [               shift and go to state 6


state 5

    (1) programa -> DEF ID : . [ listacmd ]
    (3) programa -> DEF ID : . error listacmd ]
    (4) programa -> DEF ID : . [ listacmd error

    [               shift and go to state 8
    error           shift and go to state 7


state 6

    (2) programa -> DEF ID error [ . listacmd ]
    (6) listacmd -> . comando listacmd1
    (9) comando -> . cmdatribui
    (10) comando -> . cmdentrada
    (11) comando -> . cmdsaida
    (12) comando -> . cmdselecao
    (13) comando -> . cmdrepeticao
    (21) cmdatribui -> . listaidenti SIM_ATTR expressao ;
    (22) cmdentrada -> . INPUT ( listaidenti ) ;
    (23) cmdentrada -> . INPUT ( listaidenti error ;
    (24) cmdentrada -> . INPUT error listaidenti ) ;
    (25) cmdentrada -> . INPUT ( listaidenti ) error
    (26) cmdsaida -> . OUTPUT ( listaexp ) ;
    (27) cmdsaida -> . OUTPUT ( listaexp error ;
    (28) cmdsaida -> . OUTPUT error listaexp ) ;
    (29) cmdsaida -> . OUTPUT ( listaexp ) error
    (30) cmdselecao -> . IF expressao : [ listacmd ] elif else ;
    (31) cmdselecao -> . IF expressao error [ listacmd ] elif else ;
    (32) cmdselecao -> . IF expressao : error listacmd ] elif else ;
    (33) cmdselecao -> . IF expressao : [ listacmd error elif else ;
    (34) cmdselecao -> . IF expressao : [ listacmd ] elif else error
    (45) cmdrepeticao -> . WHILE expressao : [ listacmd ] else ;
    (46) cmdrepeticao -> . WHILE expressao error [ listacmd ] else ;
    (47) cmdrepeticao -> . WHILE expressao : error listacmd ] else ;
    (48) cmdrepeticao -> . WHILE expressao : [ listacmd error else ;
    (49) cmdrepeticao -> . WHILE expressao : [ listacmd ] else error
    (14) listaidenti -> . ID listaindenti1

    INPUT           shift and go to state 16
    OUTPUT          shift and go to state 21
    IF              shift and go to state 18
    WHILE           shift and go to state 11
    ID              shift and go to state 17

    listaidenti                    shift and go to state 15
    cmdrepeticao                   shift and go to state 19
    cmdselecao                     shift and go to state 9
    cmdentrada                     shift and go to state 10
    listacmd                       shift and go to state 12
    cmdsaida                       shift and go to state 14
    comando                        shift and go to state 20
    cmdatribui                     shift and go to state 13

state 7

    (3) programa -> DEF ID : error . listacmd ]
    (6) listacmd -> . comando listacmd1
    (9) comando -> . cmdatribui
    (10) comando -> . cmdentrada
    (11) comando -> . cmdsaida
    (12) comando -> . cmdselecao
    (13) comando -> . cmdrepeticao
    (21) cmdatribui -> . listaidenti SIM_ATTR expressao ;
    (22) cmdentrada -> . INPUT ( listaidenti ) ;
    (23) cmdentrada -> . INPUT ( listaidenti error ;
    (24) cmdentrada -> . INPUT error listaidenti ) ;
    (25) cmdentrada -> . INPUT ( listaidenti ) error
    (26) cmdsaida -> . OUTPUT ( listaexp ) ;
    (27) cmdsaida -> . OUTPUT ( listaexp error ;
    (28) cmdsaida -> . OUTPUT error listaexp ) ;
    (29) cmdsaida -> . OUTPUT ( listaexp ) error
    (30) cmdselecao -> . IF expressao : [ listacmd ] elif else ;
    (31) cmdselecao -> . IF expressao error [ listacmd ] elif else ;
    (32) cmdselecao -> . IF expressao : error listacmd ] elif else ;
    (33) cmdselecao -> . IF expressao : [ listacmd error elif else ;
    (34) cmdselecao -> . IF expressao : [ listacmd ] elif else error
    (45) cmdrepeticao -> . WHILE expressao : [ listacmd ] else ;
    (46) cmdrepeticao -> . WHILE expressao error [ listacmd ] else ;
    (47) cmdrepeticao -> . WHILE expressao : error listacmd ] else ;
    (48) cmdrepeticao -> . WHILE expressao : [ listacmd error else ;
    (49) cmdrepeticao -> . WHILE expressao : [ listacmd ] else error
    (14) listaidenti -> . ID listaindenti1

    INPUT           shift and go to state 16
    OUTPUT          shift and go to state 21
    IF              shift and go to state 18
    WHILE           shift and go to state 11
    ID              shift and go to state 17

    listaidenti                    shift and go to state 15
    cmdrepeticao                   shift and go to state 19
    cmdselecao                     shift and go to state 9
    cmdentrada                     shift and go to state 10
    listacmd                       shift and go to state 22
    cmdsaida                       shift and go to state 14
    comando                        shift and go to state 20
    cmdatribui                     shift and go to state 13

state 8

    (1) programa -> DEF ID : [ . listacmd ]
    (4) programa -> DEF ID : [ . listacmd error
    (6) listacmd -> . comando listacmd1
    (9) comando -> . cmdatribui
    (10) comando -> . cmdentrada
    (11) comando -> . cmdsaida
    (12) comando -> . cmdselecao
    (13) comando -> . cmdrepeticao
    (21) cmdatribui -> . listaidenti SIM_ATTR expressao ;
    (22) cmdentrada -> . INPUT ( listaidenti ) ;
    (23) cmdentrada -> . INPUT ( listaidenti error ;
    (24) cmdentrada -> . INPUT error listaidenti ) ;
    (25) cmdentrada -> . INPUT ( listaidenti ) error
    (26) cmdsaida -> . OUTPUT ( listaexp ) ;
    (27) cmdsaida -> . OUTPUT ( listaexp error ;
    (28) cmdsaida -> . OUTPUT error listaexp ) ;
    (29) cmdsaida -> . OUTPUT ( listaexp ) error
    (30) cmdselecao -> . IF expressao : [ listacmd ] elif else ;
    (31) cmdselecao -> . IF expressao error [ listacmd ] elif else ;
    (32) cmdselecao -> . IF expressao : error listacmd ] elif else ;
    (33) cmdselecao -> . IF expressao : [ listacmd error elif else ;
    (34) cmdselecao -> . IF expressao : [ listacmd ] elif else error
    (45) cmdrepeticao -> . WHILE expressao : [ listacmd ] else ;
    (46) cmdrepeticao -> . WHILE expressao error [ listacmd ] else ;
    (47) cmdrepeticao -> . WHILE expressao : error listacmd ] else ;
    (48) cmdrepeticao -> . WHILE expressao : [ listacmd error else ;
    (49) cmdrepeticao -> . WHILE expressao : [ listacmd ] else error
    (14) listaidenti -> . ID listaindenti1

    INPUT           shift and go to state 16
    OUTPUT          shift and go to state 21
    IF              shift and go to state 18
    WHILE           shift and go to state 11
    ID              shift and go to state 17

    listaidenti                    shift and go to state 15
    cmdrepeticao                   shift and go to state 19
    cmdselecao                     shift and go to state 9
    cmdentrada                     shift and go to state 10
    listacmd                       shift and go to state 23
    cmdsaida                       shift and go to state 14
    comando                        shift and go to state 20
    cmdatribui                     shift and go to state 13

state 9

    (12) comando -> cmdselecao .

    INPUT           reduce using rule 12 (comando -> cmdselecao .)
    OUTPUT          reduce using rule 12 (comando -> cmdselecao .)
    IF              reduce using rule 12 (comando -> cmdselecao .)
    WHILE           reduce using rule 12 (comando -> cmdselecao .)
    ID              reduce using rule 12 (comando -> cmdselecao .)
    ]               reduce using rule 12 (comando -> cmdselecao .)
    error           reduce using rule 12 (comando -> cmdselecao .)


state 10

    (10) comando -> cmdentrada .

    INPUT           reduce using rule 10 (comando -> cmdentrada .)
    OUTPUT          reduce using rule 10 (comando -> cmdentrada .)
    IF              reduce using rule 10 (comando -> cmdentrada .)
    WHILE           reduce using rule 10 (comando -> cmdentrada .)
    ID              reduce using rule 10 (comando -> cmdentrada .)
    ]               reduce using rule 10 (comando -> cmdentrada .)
    error           reduce using rule 10 (comando -> cmdentrada .)


state 11

    (45) cmdrepeticao -> WHILE . expressao : [ listacmd ] else ;
    (46) cmdrepeticao -> WHILE . expressao error [ listacmd ] else ;
    (47) cmdrepeticao -> WHILE . expressao : error listacmd ] else ;
    (48) cmdrepeticao -> WHILE . expressao : [ listacmd error else ;
    (49) cmdrepeticao -> WHILE . expressao : [ listacmd ] else error
    (50) expressao -> . valor expressao1
    (55) valor -> . relacional
    (56) valor -> . TRUE
    (57) valor -> . FALSE
    (58) valor -> . NOT valor
    (59) relacional -> . aritmetica relacional1
    (68) aritmetica -> . termo aritmetica1
    (72) termo -> . fator termo1
    (77) fator -> . elemento fator1
    (80) elemento -> . ID
    (81) elemento -> . INTEIRO
    (82) elemento -> . REAL
    (83) elemento -> . LITERAL
    (84) elemento -> . ( expressao )
    (85) elemento -> . + elemento
    (86) elemento -> . - elemento

    TRUE            shift and go to state 26
    FALSE           shift and go to state 39
    NOT             shift and go to state 40
    ID              shift and go to state 37
    INTEIRO         shift and go to state 27
    REAL            shift and go to state 24
    LITERAL         shift and go to state 34
    (               shift and go to state 32
    +               shift and go to state 29
    -               shift and go to state 25

    aritmetica                     shift and go to state 31
    expressao                      shift and go to state 28
    fator                          shift and go to state 30
    termo                          shift and go to state 35
    valor                          shift and go to state 33
    relacional                     shift and go to state 36
    elemento                       shift and go to state 38

state 12

    (2) programa -> DEF ID error [ listacmd . ]

    ]               shift and go to state 41


state 13

    (9) comando -> cmdatribui .

    INPUT           reduce using rule 9 (comando -> cmdatribui .)
    OUTPUT          reduce using rule 9 (comando -> cmdatribui .)
    IF              reduce using rule 9 (comando -> cmdatribui .)
    WHILE           reduce using rule 9 (comando -> cmdatribui .)
    ID              reduce using rule 9 (comando -> cmdatribui .)
    ]               reduce using rule 9 (comando -> cmdatribui .)
    error           reduce using rule 9 (comando -> cmdatribui .)


state 14

    (11) comando -> cmdsaida .

    INPUT           reduce using rule 11 (comando -> cmdsaida .)
    OUTPUT          reduce using rule 11 (comando -> cmdsaida .)
    IF              reduce using rule 11 (comando -> cmdsaida .)
    WHILE           reduce using rule 11 (comando -> cmdsaida .)
    ID              reduce using rule 11 (comando -> cmdsaida .)
    ]               reduce using rule 11 (comando -> cmdsaida .)
    error           reduce using rule 11 (comando -> cmdsaida .)


state 15

    (21) cmdatribui -> listaidenti . SIM_ATTR expressao ;

    SIM_ATTR        shift and go to state 42


state 16

    (22) cmdentrada -> INPUT . ( listaidenti ) ;
    (23) cmdentrada -> INPUT . ( listaidenti error ;
    (24) cmdentrada -> INPUT . error listaidenti ) ;
    (25) cmdentrada -> INPUT . ( listaidenti ) error

    (               shift and go to state 43
    error           shift and go to state 44

